[package]
name = "telegraf"
version = "0.3.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
edition = "2018"
repository = "https://github.com/maxmindlin/telegraf-rust"
description = "Minimal rust wrapper for the telegraf/influxdb protocol"
license = "MIT"
readme = "README.md"
keywords = ["telegraf", "influxdb", "influx", "metrics"]
categories = ["database"]

[workspace]
members = ["derive", "tests"]

[dependencies]
url = "2.1.1"
derive = { path = "derive" }

# [features]
# derive = ["telegraf_derive"]
