[package]
name = "telegraf"
version = "0.4.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
edition = "2018"
repository = "https://github.com/maxmindlin/telegraf-rust"
description = "Minimal rust wrapper for the telegraf/influxdb protocol"
license = "MIT"
readme = "README.md"
keywords = ["telegraf", "influxdb", "influx", "metrics"]
categories = ["database"]

[workspace]
members = ["telegraf_derive"]
exclude = ["tests"]

[dependencies]
url = "2.1.1"
telegraf_derive = { path = "telegraf_derive", version = "0.1.0" }
