[package]
name = "telegraf"
version = "0.6.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
edition = "2018"
repository = "https://github.com/maxmindlin/telegraf-rust"
description = "Minimal rust wrapper for the telegraf/influxdb protocol"
license = "MIT"
readme = "README.md"
keywords = ["telegraf", "influxdb", "influx", "metrics"]
categories = ["database"]

[workspace]
members = ["telegraf_derive", "tests"]

[dependencies]
url = "2.1.1"
telegraf_derive = "0.2.0"
