[package]
name = "telegraf_derive"
version = "0.1.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/maxmindlin/telegraf-rust"
description = "Derive macros for the telegraf-rust library"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = { version = "1.0.74", features = ["extra-traits", "full"] }
